Поправил тесты.
Signed-off-by: Kirill <RillGd@gmail.com>